--- a/web_client/pubspec.yaml
+++ b/web_client/pubspec.yaml
@@ -3,10 +3,15 @@ description: A minimal jaspr web app.
 version: 0.0.1
 
 environment:
-  sdk: '>=2.16.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  jaspr: ^0.1.0
+  mobx:
+  jaspr:
+    git:
+      url: https://github.com/schultek/jaspr.git
+      path: packages/jaspr
+      ref: a71f766cd78e23fbadccf92862c2b27e08f5a0fa
 
 dev_dependencies:
   build_runner: ^2.1.4
