update schema and client codegen. Add more requests

--- a/dart_client/build.yaml
+++ b/dart_client/build.yaml
@@ -3,6 +3,8 @@ targets:
     builders:
       graphql_codegen:
         options:
+          addTypenameExcludedPaths:
+            - subscription
           scalars:
             Date:
               type: DateTime
