--- a/dart_client/pubspec.yaml
+++ b/dart_client/pubspec.yaml
@@ -13,6 +13,6 @@ dependencies:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
-  graphql_codegen: ^0.10.3
+  graphql_codegen: ^0.11.0-beta.4
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
