--- a/dart_client/pubspec.yaml
+++ b/dart_client/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   graphql: ^5.1.2-beta.4
   json_annotation: ^4.6.0
+  mobx: ^2.0.0
 
 dev_dependencies:
   lints: ^2.0.0
