--- a/web_client/pubspec.yaml
+++ b/web_client/pubspec.yaml
@@ -9,10 +9,14 @@ environment:
 dependencies:
   mobx:
   jaspr:
+
+  bootstrap_dart:
     git:
-      url: https://github.com/schultek/jaspr.git
-      path: packages/jaspr
-      ref: a71f766cd78e23fbadccf92862c2b27e08f5a0fa
+      url: https://github.com/juancastillo0/bootstrap_dart.git
+  jaspr_bootstrap:
+    git:
+      url: https://github.com/juancastillo0/bootstrap_dart.git
+      path: packages/jaspr_bootstrap
 
 dev_dependencies:
   build_runner: ^2.1.4
@@ -20,3 +24,16 @@ dev_dependencies:
   lints: ^1.0.0
   webdev: 2.7.7
   mobx_codegen: ^2.0.7
+
+dependency_overrides:
+  jaspr:
+    git:
+      url: https://github.com/juancastillo0/jaspr.git
+      ref: heads/observer_component_wip_v2
+      path: packages/jaspr
+    # path: ../../jaspr/packages/jaspr
+  universal_html:
+    git:
+      url: https://github.com/juancastillo0/universal_html.git
+      ref: heads/sdk_exports
+    # path: ../../universal_html
