--- a/web_client/pubspec.yaml
+++ b/web_client/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   lints: ^1.0.0
   webdev: 2.7.7
   mobx_codegen: ^2.0.7
+  sass_builder: ^2.1.2
 
 dependency_overrides:
   jaspr:
