--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
         run: cd web_client && webdev build
         if: always() && steps.install_web_client.outcome == 'success'
 
-      - run: mv web_client/build/app web_client/build/web/app
+      # - run: mv web_client/build/app web_client/build/web/app
 
       - id: compile
         name: Compile binary
