--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,7 +70,7 @@ jobs:
 
       - id: compile
         name: Compile binary
-        run: dart compile exe leto_server/bin/server.dart --output web_client/build/web/server
+        run: dart compile exe leto_server/bin/server.dart --output web_client/build/server
         if: always() && steps.install.outcome == 'success'
 
       - name: Upload binary
@@ -78,7 +78,7 @@ jobs:
         if: matrix.os == 'ubuntu-22.04' && matrix.sdk == 'stable' && github.ref_name == 'main' && github.event_name == 'push'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./web_client/build/web
+          publish_dir: ./web_client/build
 
       # - id: coverage
       #   name: Collect and report coverage
