--- a/dart_client/pubspec.yaml
+++ b/dart_client/pubspec.yaml
@@ -7,13 +7,21 @@ environment:
   sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
-  graphql: ^5.1.2-beta.4
+  graphql: # ^5.1.2-beta.4
+    git:
+      url: https://github.com/juancastillo0/graphql-flutter.git
+      ref: heads/main
+      path: packages/graphql
   json_annotation: ^4.6.0
   mobx: ^2.0.0
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
-  graphql_codegen: ^0.11.0-beta.4
+  graphql_codegen: # ^0.11.0-beta.4
+    git:
+      url: https://github.com/juancastillo0/graphql_codegen.git
+      ref: heads/main
+      path: packages/graphql_codegen
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
